# GenAI-Stack

./: .env  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  makefile  nixpacks.toml  package-lock.json  package.json  railway.json  requirements.txt
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  documents.py  nodes.py  workflows.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  chat.py  document.py  user.py  workflow.py
backend/app/schemas/: __init__.py  chat.py  nodes.py  user.py  workflow.py
backend/app/services/: __init__.py  document_processor.py  llm_service.py  node_processor.py  vector_store.py  web_search.py  workflow_engine.py
backend/tests/: __init__.py  test_chat.py  test_nodes.py  test_workflow.py
deployment/: docker-compose.monitoring.yml
deployment/docker/: nginx.conf
deployment/kubernetes/: configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  services.yaml
deployment/prometheus/: prometheus.yml
docs/: setup-guide.md
frontend/: Caddyfile  Dockerfile  Dockerfile.prod  nginx.conf  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
kubernetes/: backend-deployment.yaml  chromadb-deployment.yaml  frontend-deployment.yaml  secrets.yaml
scripts/: build.sh  deploy.sh  seed_data.py  setup.sh
(+35 files in other folders)
